# tidecaller

./: .gitignore  Dockerfile  README.MD  pyproject.toml  requiments.txt  sample_response.txt
Models/: payload.py  series.py  station.py
app/: main.py
app/utils/: Requestor.py
